# video-timecode-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: frame_rate.rs  lib.rs  test.rs
tests/: video-timecode.rs
