[package]
name = "video-timecode"
version = "0.2.1"
authors = ["Björn Lindström <bkhl@elektrubadur.se>"]
description = "Library for SMPTE timecode manipulation"
repository = "https://github.com/bkhl/video-timecode-rs"
readme = "README.md"
keywords = ["video", "broadcasting", "time", "timecode", "smpte"]
categories = ["data-structures", "date-and-time", "multimedia::video"]
license = "MIT"
